2009-08-18  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        Mention handy --bug flag of prepare-ChangeLog script.
        https://bugs.webkit.org/show_bug.cgi?id=28425

        * coding/contributing.html: Add a reference for --bug flag

2009-08-12  Joe Mason  <joe.mason@torchmobile.com>

        Reviewed by Adam Barth.

        Better explanation of "Null after navigation" in object diagram
        https://bugs.webkit.org/show_bug.cgi?id=28232

        * coding/major-objects.html:

2009-08-11  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Remove a few characters from the ASCII art to make it fit better in the
        template.

        * coding/major-objects.html:

2009-08-11  Adam Barth  <abarth@webkit.org>

        Reviewed by Oliver Hunt.

        Document relation between major objects in WebCore
        https://bugs.webkit.org/show_bug.cgi?id=28210

        Added a diagram showing the relation between major objects.

        * coding/major-objects.html: Added.

2009-08-07  Joseph Pecoraro  <joepeck02@gmail.com>

        Reviewed by Oliver Hunt.

        Fix webkit-jobs link

        * contact.html:

2009-08-03  Mark Rowe  <mrowe@apple.com>

        Update two WordPress plug-ins that we use.

        * blog/wp-content/plugins/akismet/akismet.php:
        * blog/wp-content/plugins/akismet/readme.txt:
        * blog/wp-content/plugins/commentcontrol.php:

2009-08-03  Mark Rowe  <mrowe@apple.com>

        Add some missing files and delete some obsolete files.

        * blog:

2009-08-03  Mark Rowe  <mrowe@apple.com>

        Update WordPress to the latest version.

        * blog:

2009-07-22  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam Treat.

        Mention the new webkit-help and webkit-jobs mailinglist. Change
        the description of webkit-dev to be more strict.

        * contact.html:

2009-07-22  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.
