@@ -1,3 +1,12 @@
+2009-08-20  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        major-objects.html should show direct Frame <-> Document pointers
+        https://bugs.webkit.org/show_bug.cgi?id=28479
+
+        * coding/major-objects.html: Added pointers to diagram.
+
 2009-08-18  Anton Muhin  <antonm@chromium.org>
 
         Reviewed by Adam Barth.
